tests/paczka2/big_fuzzy/17529017.err
Error in line 1: JzoiJxN A934 18,7
Error in line 6: JzoiJxN S956 26,3
Error in line 5: 3htV98J9Z S691 62,5
Error in line 9: 3htV98J9Z S956 30,4
Error in line 10: JzoiJxN S377 88,1
Error in line 37: aPQ S377 87,8
Error in line 42: JzoiJxN S691 78,9
Error in line 46: ZUI S956 92,9
Error in line 57: JzoiJxN S691 43,7
Error in line 70: pJml A934 302,1
Error in line 72: aPQ S691 213,2
Error in line 77: pJml S377 26,4
Error in line 78: pJml S956 89,3
Error in line 85: pJml S691 58,9
Error in line 89: 3htV98J9Z A934 160,9
Error in line 95: 3htV~8J~Z S377 111,6
Error in line 97: A934 S691 55,3
Error in line 94: 3htV98J9Z S377 82,7
Error in line 83: 937 S377 271,7
Error in line 119: JzoiJxN S377 9,1
Error in line 134: A934 A934 3,6
Error in line 130: 937 S377 6,7
Error in line 139: JzoiJxN A934 25,02
Error in line 142: JzoiJxN S691 110,1
Error in line 151: JzoiJxN S956 22,9
Error in line 164: JzoiJxN S691 34,66
Error in line 162: aPQ A934 5,5
Error in line 168: A934 S377 74,6
Error in line 170: A934 S956 25,3
Error in line 169: ZUI A934 55,0
Error in line 181: 937 S377 82,6
Error in line 172: ZUI S377 24,1
Error in line 191: A934 S377 97,7
Error in line 183: JzoiJxN S956 22,3
Error in line 200: ZUI A934 7,9
Error in line 212: ZUI S377 6,7
Error in line 218: ZUI A934 33,3
Error in line 232: ZUI S691 17,9
Error in line 239: A934 S377 77,6
Error in line 211: aPQ S691 87,3
Error in line 246: pJml S956 48,4
